--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="todo">ToDo</string>
     <string name="news_text">England defender Kyle Walker says France star Kylian Mbappe will not \"stand in my way of winning a World Cup\" as the pair prepare for their quarter-final pace battle.</string>
+    <string name="long_logo_text">Центральноазиатского Регионального Информационного Координационного Центра</string>
 </resources>
